// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyPair.ts should create 1`] = `
Array [
  Object {
    "date": 2020-01-01T08:00:00.000Z,
    "name": "key_pair_created",
    "payload": Object {
      "algorithms": Array [
        "ES512",
      ],
      "allowed": true,
      "created": 2020-01-01T08:00:00.000Z,
      "events": [Circular],
      "expires": 2020-01-01T08:00:00.000Z,
      "id": "259ff47d-e334-4784-a478-04bf6d6b5d84",
      "namedCurve": "P-521",
      "passphrase": null,
      "preferredAlgorithm": "ES512",
      "privateKey": "privateKey",
      "publicKey": "publicKey",
      "type": "ec",
      "updated": 2020-01-01T08:00:00.000Z,
      "version": 0,
    },
  },
]
`;

exports[`KeyPair.ts should get json 1`] = `
Object {
  "algorithms": Array [
    "ES512",
  ],
  "allowed": true,
  "created": 2020-01-01T08:00:00.000Z,
  "events": Array [],
  "expires": 2020-01-01T08:00:00.000Z,
  "id": "259ff47d-e334-4784-a478-04bf6d6b5d84",
  "namedCurve": "P-521",
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "privateKey",
  "publicKey": "publicKey",
  "type": "ec",
  "updated": 2020-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`KeyPair.ts should get/set allowed 1`] = `
Array [
  Object {
    "date": 2020-01-01T08:00:00.000Z,
    "name": "key_pair_allowed_changed",
    "payload": Object {
      "allowed": false,
    },
  },
]
`;

exports[`KeyPair.ts should get/set expires 1`] = `
Array [
  Object {
    "date": 2020-01-01T08:00:00.000Z,
    "name": "key_pair_expires_changed",
    "payload": Object {
      "expires": 2021-01-01T00:00:01.000Z,
    },
  },
]
`;

exports[`KeyPair.ts should have all data 1`] = `
Object {
  "algorithms": Array [
    "ES512",
  ],
  "allowed": true,
  "created": 2020-01-01T08:00:00.000Z,
  "events": Array [],
  "expires": 2020-01-01T08:00:00.000Z,
  "id": "259ff47d-e334-4784-a478-04bf6d6b5d84",
  "namedCurve": "P-521",
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "privateKey",
  "publicKey": "publicKey",
  "type": "ec",
  "updated": 2020-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`KeyPair.ts should have optional data 1`] = `
Object {
  "algorithms": Array [
    "RS256",
    "RS384",
  ],
  "allowed": true,
  "created": 2020-01-01T08:00:00.000Z,
  "events": Array [],
  "expires": null,
  "id": "02dc19eb-2b8b-4a83-a0c0-9ac2b306bb9a",
  "namedCurve": null,
  "passphrase": null,
  "preferredAlgorithm": "RS384",
  "privateKey": null,
  "publicKey": "publicKey",
  "type": "rsa",
  "updated": 2020-01-01T08:00:00.000Z,
  "version": 0,
}
`;
